# aix--sample-project

./: .gitignore  .mq.config.yaml  House_Prices.ipynb  MLproject  README.md  code_quality.txt  code_repository.yaml  house-prices.ipynb  pyproject.toml
.mq/: project.yml
house_prices/: train.py
test/: test_house_prices.py
