[tool.poetry]
name = "aix--sample-project"
version = "0.1.0"
description = "Demonstration environment for ai explainability using Shapash"
authors = ["Johannes Forster <johannesforster@kpmg.com>"]
license = "Apache-2.0"

[tool.poetry.dependencies]
python = "~3.8"
mlflow = "^1.13.1"
maquette = "0.1.5"
shapash = "1.1.0"
pytest = "^6.2.2"
pylint = "^2.7.2"

[tool.poetry.scripts]
code_quality = "pylint house_prices > code_quality.txt"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
